Bug 913160 - Back out Bug 894331 to solve browser hangs when deleting history. a=lsblakk