toolkit/components/places/tests/queries/test_history_queries_titles_liveUpdate.js
@@ -35,7 +35,6 @@ function searchNodeHavingUrl(aRoot, aUrl) {
       return aRoot.getChild(i);
     }
   }
-  return null;
 }
 
 function newQueryWithOptions()
@@ -59,12 +58,13 @@ add_task(function pages_query()
 
   compareArrayToResult([gTestData[0], gTestData[1], gTestData[2]], root);
   for (let i = 0; i < root.childCount; i++) {
-    do_check_eq(root.getChild(i).title, gTestData[i].title);
-    let uri = NetUtil.newURI(root.getChild(i).uri);
+    let node = root.getChild(i);
+    do_check_eq(node.title, gTestData[i].title);
+    let uri = NetUtil.newURI(node.uri);
     yield promiseAddVisits({uri: uri, title: "changedTitle"});
-    do_check_eq(root.getChild(i).title, "changedTitle");
+    do_check_eq(node.title, "changedTitle");
     yield promiseAddVisits({uri: uri, title: gTestData[i].title});
-    do_check_eq(root.getChild(i).title, gTestData[i].title);
+    do_check_eq(node.title, gTestData[i].title);
   }
 
   root.containerOpen = false;
@@ -109,12 +109,13 @@ add_task(function pages_searchterm_query()
 
   compareArrayToResult([gTestData[0], gTestData[1], gTestData[2]], root);
   for (let i = 0; i < root.childCount; i++) {
-    let uri = NetUtil.newURI(root.getChild(i).uri);
-    do_check_eq(root.getChild(i).title, gTestData[i].title);
+    let node = root.getChild(i);
+    let uri = NetUtil.newURI(node.uri);
+    do_check_eq(node.title, gTestData[i].title);
     yield promiseAddVisits({uri: uri, title: "changedTitle"});
-    do_check_eq(root.getChild(i).title, "changedTitle");
+    do_check_eq(node.title, "changedTitle");
     yield promiseAddVisits({uri: uri, title: gTestData[i].title});
-    do_check_eq(root.getChild(i).title, gTestData[i].title);
+    do_check_eq(node.title, gTestData[i].title);
   }
 
   root.containerOpen = false;
